--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
         "types/index.d.ts"
     ],
     "peerDependencies": {
-        "eslint": ">=8.23.0"
+        "eslint": ">=8.23.0",
+        "ts-declaration-location": "^1.0.6",
+        "typescript": "^5.0.0"
+    },
+    "peerDependenciesMeta": {
+        "ts-declaration-location": {
+            "optional": true
+        },
+        "typescript": {
+            "optional": true
+        }
     },
     "dependencies": {
         "@eslint-community/eslint-utils": "^4.5.0",
@@ -24,8 +34,7 @@
         "globals": "^15.11.0",
         "globrex": "^0.1.2",
         "ignore": "^5.3.2",
-        "semver": "^7.6.3",
-        "ts-declaration-location": "^1.0.6"
+        "semver": "^7.6.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.14.0",
@@ -52,6 +61,8 @@
         "punycode": "^2.3.1",
         "release-it": "^17.10.0",
         "rimraf": "^5.0.10",
+        "sinon": "^21.0.0",
+        "ts-declaration-location": "^1.0.6",
         "ts-ignore-import": "^4.0.1",
         "type-fest": "^4.26.1",
         "typescript": "~5.6"
