fix(no-restricted-require): Handle .. paths
no-restricted-require uses Minimatch to match the given names from the
rule's configuration to the require statements it evaluates.

As stated in #151, this behavior does not match `..` to the `**` glob
pattern. This is considered as intended behavior from Minimatch (see
isaacs/minimatch#230), but also means that the rule's behavior differs
from eslint's deprecated no-restricted-modules rule it's supposed to
replace.

Using [`globrex`](https://www.npmjs.com/package/globrex) can fix this
behavior.

Fixes #151

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint-plugin-es-x": "^7.8.0",
         "get-tsconfig": "^4.8.1",
         "globals": "^15.11.0",
+        "globrex": "^0.1.2",
         "ignore": "^5.3.2",
         "minimatch": "^9.0.5",
         "semver": "^7.6.3",
@@ -31,6 +32,7 @@
         "@eslint/js": "^9.14.0",
         "@types/eslint": "^9.6.1",
         "@types/estree": "^1.0.6",
+        "@types/globrex": "^0.1.4",
         "@types/node": "^20.17.5",
         "@typescript-eslint/parser": "^8.26.1",
         "@typescript-eslint/typescript-estree": "^8.26.1",
