--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -25,10 +25,9 @@ jobs:
           registry-url: https://registry.npmjs.org
         if: ${{ steps.release.outputs.release_created }}
       - run: |
+          npm install -g npm@latest # npm 11.5.1 or later is required so update to latest to be sure
           npm install
           npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: ${{ steps.release.outputs.release_created }}
       # - run: 'npx @humanwhocodes/tweet "espree ${{ steps.release.outputs.tag_name }} has been released: ${{ steps.release.outputs.html_url }}"'
       #   if: ${{ steps.release.outputs.release_created }}
