--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,5 +64,6 @@ jobs:
         run: npm install --no-save --force eslint@${{ matrix.eslint }}
       - name: Test
         env:
+          # set CI to false to avoid false positives in some tests - see https://github.com/eslint-community/eslint-plugin-n/pull/501s
           CI: false
         run: npm run -s test:tests
