--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,6 @@ on:
     branches: [master]
   schedule:
     - cron: 0 0 * * 0
-
 jobs:
 
   lint:
@@ -34,10 +33,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         eslint: ["9.x"]
         node: ["20.19.0", "20.x", "22.x", "24.x", "25.x"]
-        include:
-          - os: ubuntu-latest
-            eslint: "10.0.0-rc.0"
-            node: "lts/*"
+        # include:
+        #   - os: ubuntu-latest
+        #     eslint: "10.0.0-rc.0"
+        #     node: "lts/*"
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
