--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@types/node": "^20.17.5",
         "@typescript-eslint/parser": "^8.26.1",
         "@typescript-eslint/typescript-estree": "^8.26.1",
-        "eslint": "^9.31.0",
+        "eslint": "^10.0.0-rc.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-doc-generator": "^1.7.1",
         "eslint-plugin-eslint-plugin": "^6.3.1",
