--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: 20.x
+          node-version: lts/*
       - run: npm install
       - run: npm run -s lint
       - run: npm run -s test:types
@@ -31,12 +31,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        eslint: ["9.x"]
+        eslint: ["9.x", "8.57.1"]
         node: ["20.19.0", "20.x", "22.x", "24.x", "25.x"]
-        # include:
-        #   - os: ubuntu-latest
-        #     eslint: "10.0.0-rc.0"
-        #     node: "lts/*"
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
