--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -3,17 +3,55 @@
     "prerelease": false,
     "include-component-in-tag": false,
     "changelog-sections": [
-        { "type": "feat", "section": "🌟 Features", "hidden": false },
-        { "type": "fix", "section": "🩹 Fixes", "hidden": false },
-        { "type": "docs", "section": "📚 Documentation", "hidden": false },
-
-        { "type": "chore", "section": "🧹 Chores", "hidden": false },
-        { "type": "perf", "section": "🧹 Chores", "hidden": false },
-        { "type": "refactor", "section": "🧹 Chores", "hidden": false },
-        { "type": "test", "section": "🧹 Chores", "hidden": false },
-
-        { "type": "build", "section": "🤖 Automation", "hidden": false },
-        { "type": "ci", "section": "🤖 Automation", "hidden": true }
+        {
+            "type": "feat",
+            "section": "🌟 Features",
+            "hidden": false
+        },
+        {
+            "type": "fix",
+            "section": "🩹 Fixes",
+            "hidden": false
+        },
+        {
+            "type": "docs",
+            "section": "📚 Documentation",
+            "hidden": false
+        },
+        {
+            "type": "chore",
+            "section": "🧹 Chores",
+            "hidden": false
+        },
+        {
+            "type": "perf",
+            "section": "🧹 Chores",
+            "hidden": false
+        },
+        {
+            "type": "refactor",
+            "section": "🧹 Chores",
+            "hidden": false
+        },
+        {
+            "type": "test",
+            "section": "🧹 Chores",
+            "hidden": false
+        },
+        {
+            "type": "build",
+            "section": "🤖 Automation",
+            "hidden": false
+        },
+        {
+            "type": "ci",
+            "section": "🤖 Automation",
+            "hidden": true
+        }
     ],
-    "packages": { ".": {} }
+    "versioning": "branch-name",
+    "target-branch": "v17.x",
+    "packages": {
+        ".": {}
+    }
 }
